--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:mapper": "ts-node src/lib/recommendation/test-mapper.ts",
+    "test:algorithm": "ts-node src/lib/recommendation/algorithm.ts",
     "prisma:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
