--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:algorithm": "ts-node src/lib/recommendation/algorithm.ts",
     "prisma:seed": "ts-node prisma/seed.ts"
   },
+  "postinstall": "prisma generate",
   "dependencies": {
     "@google/genai": "^1.6.0",
     "@nestjs/common": "^11.0.1",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@flydotio/dockerfile": "^0.7.10",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
